--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,29 @@
 name: ci
+
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push events...
   push:
+    # ...to the master branch
     branches:
       - master
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel.
 jobs:
+  # The job: deploy. For Automatic deployment of mkdocs documentation site.
   deploy:
+    # The type of runner that the job will run on.
     runs-on: ubuntu-latest
+    # Steps represent a sequence of tasks that will be run sequentially as part of the job.
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it.
       - uses: actions/checkout@v2
+
+      - name: Install Python
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
+
+      # Use mkdocs to deploy site
       - run: pip install mkdocs-material
       - run: mkdocs gh-deploy --force
